# Conduit

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: categories.rs  history.rs  mod.rs  runner.rs  scheduler.rs  scripts.rs  settings.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src/components/Layout/: EmptyState.tsx  MainContent.tsx  Sidebar.tsx  TopBar.tsx
src/components/Runner/: RunHistoryItem.tsx  ScriptDetailView.tsx  TerminalOutput.tsx  XTerminal.tsx
src/components/Schedule/: ScheduleDialog.tsx  ScheduleIndicator.tsx  SchedulePanel.tsx
src/components/Scripts/: AddScriptDialog.tsx  EditScriptDialog.tsx  ScriptCard.tsx  ScriptList.tsx
src/components/UI/: Button.tsx  ColorPicker.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ErrorBoundary.tsx  SettingsDialog.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts  useScriptContextMenu.ts  useScriptRunner.ts  useToast.ts
src/lib/: tauri.ts
src/stores/: useCategoryStore.ts  useRunnerStore.ts  useScheduleStore.ts  useScriptStore.ts  useSettingsStore.ts
src/styles/: globals.css  themes.css
src/types/: index.ts
test-scripts/: test-terminal.bat  test-terminal.cmd  test-terminal.command  test-terminal.ps1  test-terminal.sh
