[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

[lib]
name = "conduit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = [] }
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
base64 = "0.22"
[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
